--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,37 +1,104 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MetaCoin | Truffle Webpack Demo w/ Frontend</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seafood Supply Chain</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <style>
-    input {
-      display: block;
-      margin-bottom: 12px;
-    }
-  </style>
   <body>
-    <h1>MetaCoin — Example Truffle Dapp</h1>
-    <p>You have <strong class="balance">loading...</strong> META</p>
+    <div class="container">
+      <h1 style="text-align: center;">Seafood Supply Chain</h1>
+      <hr>
+      <p style="text-align: center;">Prove the authenticity of seafood products using the Ethereum blockchain.</p>
+    </div>
 
-    <h1>Send MetaCoin</h1>
+    <div id="ftc-harvest">
 
-    <label for="amount">Amount:</label>
-    <input type="text" id="amount" placeholder="e.g. 95" />
+      <h2>Product Overview</h2>
+      <div class="form-group">
+        SKU
+        <br>
+        <input class="input-field" type="number" id="sku" name="sku" value=1><br>
+        UPC
+        <br>
+        <input type="number" id="upc" name="upc" value=1><br>
+        Current Owner ID
+        <br>
+        <input type="text" id="ownerID" name="ownerID" value="0x963865f57804b38459dd4b2da2f760211a200438" size="50"><br>
+        <div class=button-div>
+          <button class="btn-fetchRaw" id="button" type="button" onclick="App.sendCoin()">Fetch Raw Data</button>
+          <button class="btn-fetchProcessed" id="button" type="button" onclick="App.sendCoin()">Fetch Processed Data</button>
+        </div>
+      </div>
+      <div class=form-break></div>
 
-    <label for="receiver">To address:</label>
-    <input
-      type="text"
-      id="receiver"
-      placeholder="e.g. 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"
-    />
+      <h2>Fisher Details</h2>
+      <div class="form-group">
+          Fisher ID
+          <br>
+          <input type="text" id="originFisherID" name="originFisherID" value="0x99c289eb2aacec289631a5ddf62cf27a63d4494f"
+              size="50"><br>
+          Fisher Name
+          <br>
+          <input type="text" id="originFisherName" name="originFisherName" value="John Doe"><br>
+          Fisher Information
+          <br>
+          <input type="text" id="originFisherInformation" name="originFisherInformation" value="Yarra Valley"><br>
+          Fisher Latitude
+          <br>
+          <input type="text" id="originFisherLatitude" name="originFisherLatitude" value="-38.239770"><br>
+          Fisher Longitude
+          <br>
+          <input type="text" id="originFisherLongitude" name="originFisherLongitude" value="144.341490"><br>
+          <br>
+          <button class="btn-harvest" id="button" type="button" data-id="1">Fish</button>
+          <button class="btn-forsale" id="button" type="button" data-id="4">ForSale</button>
+      </div>
+      <div class=form-break></div>
+      <h2>Product Details</h2>
+      <div class="form-group">
+          Product Notes
+          <br>
+          <input type="text" id="productNotes" name="productNotes" value="Best beans for Espresso" size="60"><br>
+          Product Price
+          <br>
+          <input type="number" id="productPrice" name="productPrice" value=1>ETH<br>
+          Distributor ID
+          <br>
+          <input type="text" id="distributorID" name="distributorID" value="0xf1b1bcd24dad92303dd9fe78be639f7bcf9c238d"
+              size="50">
+          <br>
+          Retailer ID
+          <br>
+          <input type="text" id="retailerID" name="retailerID" value="0x0fb2bfefd526966c87efa19f6693d50971763fc2"
+              size="50"><br>
+          Distributor ID
+          <br>
+          <input type="text" id="consumerID" name="consumerID" value="0x5d777e9127b28fb119e81a6304278a0a21bef1c4"
+              size="50"><br>
+          <br>
+          <button class="btn-buy" id="button" type="button" data-id="5">Buy</button>
+          <button class="btn-process" id="button" type="button" data-id="2">Process</button>
+          <button class="btn-pack" id="button" type="button" data-id="3">Pack</button>
+          <button class="btn-ship" id="button" type="button" data-id="6">Ship</button>
+          <button class="btn-receive" id="button" type="button" data-id="7">Receive</button>
+          <button class="btn-purchase" id="button" type="button" data-id="8">Purchase</button>
+      </div>
+      <div class=form-break></div>
+      <hr>
+    </div>
 
-    <button onclick="App.sendCoin()">Send MetaCoin</button>
+    <h2>Transaction History<span id="ftc-history"></span></h2>
+    <div>
+        <ul id="ftc-events">
+            <!-- Events will appear here from app.js -->
+        </ul>
+        <br>
+        <hr>
+    </div>
 
-    <p id="status"></p>
-    <p>
-      <strong>Hint:</strong> open the browser developer console to view any
-      errors and warnings.
-    </p>
     <script src="index.js"></script>
   </body>
 </html>
