--- a/app/src/index.html
+++ b/app/src/index.html
@@ -20,16 +20,19 @@
       <div class="form-group">
         SKU
         <br>
-        <input class="input-field" type="number" id="sku" name="sku" value=1><br>
+        <input class="input-field" type="number" id="sku" name="sku" value=0 disabled><br>
         UPC
         <br>
         <input type="number" id="upc" name="upc" value=1><br>
         Current Owner ID
         <br>
-        <input type="text" id="ownerID" name="ownerID" value="0x963865f57804b38459dd4b2da2f760211a200438" size="50"><br>
+        <input type="text" id="ownerID" name="ownerID" value="" size="50" disabled><br>
+        State
+        <br>
+        <input type="text" id="itemState" name="itemState" value="Unknown" size="50" disabled><br>
         <div class=button-div>
-          <button class="btn-fetchRaw" id="button" type="button" onclick="App.sendCoin()">Fetch Raw Data</button>
-          <button class="btn-fetchProcessed" id="button" type="button" onclick="App.sendCoin()">Fetch Processed Data</button>
+          <button class="btn-fetchRaw" id="button" type="button" onclick="App.fetchRaw()">Fetch Raw Data</button>
+          <button class="btn-fetchProcessed" id="button" type="button" onclick="App.fetchProcessed()">Fetch Processed Data</button>
         </div>
       </div>
       <div class=form-break></div>
@@ -38,53 +41,53 @@
       <div class="form-group">
           Fisher ID
           <br>
-          <input type="text" id="originFisherID" name="originFisherID" value="0x99c289eb2aacec289631a5ddf62cf27a63d4494f"
-              size="50"><br>
+          <input type="text" id="originFisherID" name="originFisherID" placeholder="0x0000000000000000000000000000000000000000"
+              size="50" disabled><br>
           Fisher Name
           <br>
           <input type="text" id="originFisherName" name="originFisherName" value="John Doe"><br>
           Fisher Information
           <br>
-          <input type="text" id="originFisherInformation" name="originFisherInformation" value="Yarra Valley"><br>
+          <input type="text" id="originFisherInformation" name="originFisherInformation" value="North Sea"><br>
           Fisher Latitude
           <br>
-          <input type="text" id="originFisherLatitude" name="originFisherLatitude" value="-38.239770"><br>
+          <input type="text" id="originFisherLatitude" name="originFisherLatitude" value="56.511018"><br>
           Fisher Longitude
           <br>
-          <input type="text" id="originFisherLongitude" name="originFisherLongitude" value="144.341490"><br>
+          <input type="text" id="originFisherLongitude" name="originFisherLongitude" value="3.515625"><br>
           <br>
-          <button class="btn-harvest" id="button" type="button" data-id="1">Fish</button>
-          <button class="btn-forsale" id="button" type="button" data-id="4">ForSale</button>
+          <button class="btn-harvest" id="button" type="button" onclick="App.fishItem()">Fish</button>
+          <button class="btn-forsale" id="button" type="button" onclick="App.sellItem()">ForSale</button>
       </div>
       <div class=form-break></div>
       <h2>Product Details</h2>
       <div class="form-group">
           Product Notes
           <br>
-          <input type="text" id="productNotes" name="productNotes" value="Best beans for Espresso" size="60"><br>
+          <input type="text" id="productNotes" name="productNotes" value="North Sea Shrimp" size="60"><br>
           Product Price
           <br>
           <input type="number" id="productPrice" name="productPrice" value=1>ETH<br>
           Distributor ID
           <br>
-          <input type="text" id="distributorID" name="distributorID" value="0xf1b1bcd24dad92303dd9fe78be639f7bcf9c238d"
-              size="50">
+          <input type="text" id="distributorID" name="distributorID" placeholder="0x0000000000000000000000000000000000000000"
+              size="50" disabled>
           <br>
           Retailer ID
           <br>
-          <input type="text" id="retailerID" name="retailerID" value="0x0fb2bfefd526966c87efa19f6693d50971763fc2"
-              size="50"><br>
-          Distributor ID
+          <input type="text" id="retailerID" name="retailerID" placeholder="0x0000000000000000000000000000000000000000"
+              size="50" disabled><br>
+          Consumer ID
           <br>
-          <input type="text" id="consumerID" name="consumerID" value="0x5d777e9127b28fb119e81a6304278a0a21bef1c4"
-              size="50"><br>
+          <input type="text" id="consumerID" name="consumerID" placeholder="0x0000000000000000000000000000000000000000"
+              size="50" disabled><br>
           <br>
-          <button class="btn-buy" id="button" type="button" data-id="5">Buy</button>
-          <button class="btn-process" id="button" type="button" data-id="2">Process</button>
-          <button class="btn-pack" id="button" type="button" data-id="3">Pack</button>
-          <button class="btn-ship" id="button" type="button" data-id="6">Ship</button>
-          <button class="btn-receive" id="button" type="button" data-id="7">Receive</button>
-          <button class="btn-purchase" id="button" type="button" data-id="8">Purchase</button>
+          <button class="btn-buy" id="button" type="button" onclick="App.buyItem()">Buy</button>
+          <button class="btn-process" id="button" type="button" onclick="App.processItem()">Process</button>
+          <button class="btn-pack" id="button" type="button" onclick="App.packItem()">Pack</button>
+          <button class="btn-ship" id="button" type="button" onclick="App.shipItem()">Ship</button>
+          <button class="btn-receive" id="button" type="button" onclick="App.receiveItem()">Receive</button>
+          <button class="btn-purchase" id="button" type="button" onclick="App.purchaseItem()">Purchase</button>
       </div>
       <div class=form-break></div>
       <hr>
